--- a/block-BRaabf/code/counter-app/public/index.html
+++ b/block-BRaabf/code/counter-app/public/index.html
@@ -20,10 +20,8 @@
           rel="stylesheet"
         />
         <!--Font Awesome-->
-        <script
-          src="https://kit.fontawesome.com/5cc6fb9f6b.js"
-          crossorigin="anonymous"
-        ></script>
+        <script src="https://kit.fontawesome.com/1ccbc6b453.js" crossorigin="anonymous">
+        </script>
         <!-- Title -->
     <title>Counter App</title>
   </head>
